Fixing spacing for create page

--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -1,7 +1,8 @@
 .create {
   color: #555;
   max-width: 480px;
-  margin: 60px auto;
+  margin: 0 auto;
+  padding: 30px 0;
 }
 
 @media (max-width: 767.98px) {
